# saberTodoBackend

./: .env  README.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml
cmd/api/: main.go
internal/database/: database.go  database_test.go
internal/models/: models.go
internal/server/: server.go
sabertodo/: manage.py
sabertodo/exchange/: models.py  serializers.py  test.py  urls.py  views.py
sabertodo/pet/: models.py
sabertodo/rules/: models.py  serializer.py  urls.py  views.py
sabertodo/rules/migrations/: 0001_initial.py
sabertodo/sabertodo/: asgi.py  settings.py  urls.py  wsgi.py
sabertodo/student/: models.py  serializers.py  urls.py  views.py
sabertodo/student_task/: models.py  serializers.py
sabertodo/task/: models.py  serializers.py  url.py  views.py
